--- a/app/src/main/res/layout/sub_fragment_contact.xml
+++ b/app/src/main/res/layout/sub_fragment_contact.xml
@@ -5,161 +5,143 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingBottom="@dimen/size_small_8dp"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/size_small_8dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_marginBottom="@dimen/size_small_8dp"
-            android:id="@+id/cardViewSuggestFriends"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSuggestFriends"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/cardViewCloseFriends"
-            app:layout_constraintTop_toTopOf="parent">
+            android:background="@android:color/white"/>
+
+
+        <LinearLayout
+            android:id="@+id/closeFriendsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/size_small_8dp"
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:padding="@dimen/size_small_8dp">
+
+            <TextView
+                android:id="@+id/closeFriendsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_close_friends"
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewSuggestFriends"
+                android:id="@+id/recyclerViewCloseFriends"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_small_8dp" />
+        </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_marginBottom="@dimen/size_small_8dp"
-            android:id="@+id/cardViewCloseFriends"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@android:color/white"
+            android:id="@+id/newlyUpdatedFriendsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/cardViewStatus"
-            app:layout_constraintTop_toBottomOf="@id/cardViewSuggestFriends">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="@dimen/size_small_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textStyle="bold"
-                    android:text="@string/label_close_friends"
-                    android:id="@+id/closeFriendsTextView"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            android:layout_marginTop="@dimen/size_small_8dp"
+            android:padding="@dimen/size_small_8dp"
+            >
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginTop="@dimen/size_small_8dp"
-                    app:layout_constraintTop_toBottomOf="@id/closeFriendsTextView"
-                    android:id="@+id/recyclerViewCloseFriends"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/statusDescTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/size_small_8dp"
+                android:text="@string/label_newly_updated_friends"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/statusTextView"
+                app:layout_constraintEnd_toStartOf="@id/switch1"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_marginBottom="@dimen/size_small_8dp"
-            android:id="@+id/cardViewStatus"
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/size_small_8dp"
+                app:layout_constraintBottom_toTopOf="@id/statusTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@id/statusDescTextView"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/statusTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/description_update_status"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@android:color/white"
+            android:id="@+id/allContactsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/cardViewAllContacts"
-            app:layout_constraintTop_toBottomOf="@id/cardViewCloseFriends">
+            android:layout_marginTop="@dimen/size_small_8dp"
+            android:padding="@dimen/size_small_8dp"
+            >
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="@dimen/size_small_8dp"
+            <TextView
+                android:id="@+id/allContactTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_all_contacts"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_update"
+                android:textAllCaps="true"
+                android:textColor="@android:color/holo_blue_light"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/allContactRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_small_8dp"
+                app:layout_constraintTop_toBottomOf="@id/allContactTextView" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/statusTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/description_update_status"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:textStyle="bold"
-                    android:id="@+id/statusDescTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/size_small_8dp"
-                    android:text="@string/label_newly_updated_friends"
-                    app:layout_constraintBottom_toTopOf="@id/statusTextView"
-                    app:layout_constraintEnd_toStartOf="@id/switch1"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintHorizontal_chainStyle="spread_inside"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@+id/switch1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/size_small_8dp"
-                    app:layout_constraintBottom_toTopOf="@id/statusTextView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@id/statusDescTextView"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_marginBottom="@dimen/size_medium_16dp"
-            android:id="@+id/cardViewAllContacts"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/updateContactDescTextView"
-            app:layout_constraintTop_toBottomOf="@id/cardViewStatus">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="@dimen/size_small_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textStyle="bold"
-                    android:text="@string/label_all_contacts"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/allContactTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@android:color/holo_blue_light"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
-                    android:text="@string/label_update"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/allContactRecyclerView"
-                    android:layout_marginTop="@dimen/size_small_8dp"
-                    app:layout_constraintTop_toBottomOf="@id/allContactTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:textAlignment="center"
             android:id="@+id/updateContactDescTextView"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/size_small_8dp"
+            android:layout_marginTop="@dimen/size_medium_16dp"
             android:layout_marginRight="@dimen/size_small_8dp"
-            android:layout_marginBottom="@dimen/size_medium_16dp"
             android:text="@string/description_update_contact"
-            app:layout_constraintBottom_toTopOf="@id/updateContactButton"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:textAlignment="center"/>
+
 
         <Button
+            android:layout_gravity="center_horizontal"
             android:id="@+id/updateContactButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_update_contact"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginTop="@dimen/size_medium_16dp"
+            android:layout_marginBottom="@dimen/size_medium_16dp"
+            android:text="@string/label_update_contact"/>
+    </LinearLayout>
 </ScrollView>
