--- a/app/src/main/res/layout/sub_fragment_official_account.xml
+++ b/app/src/main/res/layout/sub_fragment_official_account.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,70 +10,62 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/itemRoomRootLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/itemChatFragmentConstraintLayout"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/avatarImgView"
+                android:layout_width="@dimen/size_room_item_avatar_48dp"
+                android:layout_height="0dp"
+                android:layout_margin="@dimen/size_medium_16dp"
+                android:background="@android:drawable/screen_background_light_transparent"
+                android:contentDescription="@string/description_avatar"
+                android:src="@drawable/official_account"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="h,1:1"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_medium_16dp"
+                android:layout_marginLeft="@dimen/size_medium_16dp"
+                android:layout_marginEnd="@dimen/size_small_8dp"
+                android:layout_marginRight="@dimen/size_small_8dp"
+                android:text="@string/description_find_more_official_accounts"
+                app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/avatarImgView"
+                app:layout_constraintTop_toTopOf="@id/avatarImgView" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/size_small_8dp"
+            android:background="@android:color/white"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="@dimen/size_small_8dp"
+                android:text="@string/description_interested_official_accounts"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/avatarImgView"
-                    android:layout_width="@dimen/size_room_item_avatar_48dp"
-                    android:layout_height="0dp"
-                    android:layout_margin="@dimen/size_medium_16dp"
-                    android:background="@android:drawable/screen_background_light_transparent"
-                    android:contentDescription="@string/description_avatar"
-                    android:src="@drawable/official_account"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintDimensionRatio="h,1:1"
-                    app:layout_constraintHorizontal_chainStyle="spread_inside"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/nameTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_medium_16dp"
-                    android:layout_marginLeft="@dimen/size_medium_16dp"
-                    android:layout_marginEnd="@dimen/size_small_8dp"
-                    android:layout_marginRight="@dimen/size_small_8dp"
-                    android:text="@string/description_find_more_official_accounts"
-                    app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/avatarImgView"
-                    app:layout_constraintTop_toTopOf="@id/avatarImgView" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_marginTop="@dimen/size_small_8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:textStyle="bold"
-                    android:text="@string/description_interested_official_accounts"
-                    android:layout_margin="@dimen/size_small_8dp"
-                    android:id="@+id/textView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+                android:layout_height="match_parent" />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
