--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.Light">
+    <style name="AppTheme.NoActionBar" parent="AppTheme.Zalo">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -23,5 +23,9 @@
 
     <style name="AppTheme.Zalo" parent="Theme.MaterialComponents.Light">
         <item name="android:windowBackground">@color/colorBackground</item>
+    </style>
+
+    <style name="AppTheme.White" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 </resources>
