--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -38,8 +38,21 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
-
     </SearchView>
+
+    <TextView
+        android:text="@string/hint_search_not_clicked"
+        android:layout_marginLeft="@dimen/size_huge_48dp"
+        app:layout_constraintRight_toRightOf="@id/searchView"
+        app:layout_constraintLeft_toLeftOf="@id/searchView"
+        app:layout_constraintTop_toTopOf="@id/searchView"
+        app:layout_constraintBottom_toBottomOf="@id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_huge_48dp">
+
+    </TextView>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_marginTop="@dimen/size_small_8dp"
@@ -55,14 +68,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </com.google.android.material.tabs.TabLayout>
-    <androidx.viewpager2.widget.ViewPager2
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tabLayout"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="0dp"
-        android:layout_height="0dp">
-
-    </androidx.viewpager2.widget.ViewPager2>
-
+        android:layout_height="0dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
