--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,7 +8,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="@android:color/white"
-        android:id="@+id/chatFragmentRecyclerView"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
