--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -124,7 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/size_small_8dp" />
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewGroupFragment"
+                android:id="@+id/recyclerView"
                 android:layout_marginTop="@dimen/size_medium_16dp"
                 app:layout_constraintTop_toBottomOf="@id/joinedGroupsTV"
                 android:layout_width="match_parent"
