--- a/app/src/main/res/layout/item_contact_sub_fragment.xml
+++ b/app/src/main/res/layout/item_contact_sub_fragment.xml
@@ -2,6 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemContactSubFragmentConstraintLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="@dimen/size_small_8dp"
+    android:paddingBottom="@dimen/size_small_8dp"
+    android:paddingLeft="@dimen/size_medium_16dp"
+    android:paddingRight="@dimen/size_medium_16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -10,10 +14,8 @@
         android:id="@+id/phoneTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
+        android:layout_marginRight="@dimen/size_medium_16dp"
         android:text="@string/placeholder_text"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         app:layout_constraintEnd_toStartOf="@id/callImgButton"
@@ -24,7 +26,6 @@
         android:id="@+id/avatarImgView"
         android:layout_width="@dimen/size_room_item_avatar_48dp"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/size_small_8dp"
         android:contentDescription="@string/description_avatar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -52,8 +53,6 @@
         android:id="@+id/videoImgButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="@id/callImgButton"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toEndOf="parent"
