--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -4,13 +4,16 @@
     android:id="@+id/itemRoomRootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="@dimen/size_small_8dp"
+    android:paddingBottom="@dimen/size_small_8dp"
+    android:paddingLeft="@dimen/size_medium_16dp"
+    android:paddingRight="@dimen/size_medium_16dp"
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatarImgView"
         android:layout_width="@dimen/size_room_item_avatar_48dp"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/size_medium_16dp"
         android:contentDescription="@string/description_avatar"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -24,20 +27,14 @@
         app:layout_constraintEnd_toStartOf="@id/recvTimeTextView"
         app:layout_constraintStart_toEndOf="@id/avatarImgView"
         app:layout_constraintTop_toTopOf="@id/avatarImgView"
-        android:layout_marginStart="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
-        android:layout_marginEnd="@dimen/size_small_8dp" />
+        android:layout_marginRight="@dimen/size_medium_16dp"/>
 
     <TextView
         android:id="@+id/descTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_small_8dp"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
-        android:layout_marginBottom="@dimen/size_medium_16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iconTextView"
         app:layout_constraintStart_toStartOf="@id/nameTextView"
         app:layout_constraintTop_toBottomOf="@id/nameTextView" />
@@ -46,8 +43,6 @@
         android:id="@+id/recvTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
         android:text="@string/placeholder_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/nameTextView" />
