--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -4,76 +4,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".zalo.views.home.fragments.group_fragment.create_group_activity.CreateGroupActivity">
+
     <ImageButton
         android:id="@+id/uploadPictureImgButton"
-        android:layout_marginTop="@dimen/size_medium_16dp"
+        android:layout_width="@dimen/size_huge_48dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/size_medium_16dp"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
+        android:layout_marginTop="@dimen/size_small_8dp"
         android:background="@drawable/upload_picture"
         android:contentDescription="@string/description_avatar"
-        android:layout_marginLeft="@dimen/size_medium_16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="@dimen/size_huge_48dp"
         app:layout_constraintDimensionRatio="1:1"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/size_medium_16dp" />
-    <TextView
-        android:layout_marginLeft="@dimen/size_medium_16dp"
-        android:text="@string/description_name_group"
-        app:layout_constraintLeft_toRightOf="@id/uploadPictureImgButton"
-        app:layout_constraintBottom_toBottomOf="@id/uploadPictureImgButton"
-        app:layout_constraintTop_toTopOf="@id/uploadPictureImgButton"
-        android:layout_width="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_medium_16dp" />
-    <SearchView
-        android:queryHint="@string/hint_search_clicked"
-        android:background="@color/colorBackground"
-        android:id="@+id/searchView"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
+        android:imeOptions="actionDone"
+        android:hint="@string/description_name_group"
+        app:layout_constraintBottom_toBottomOf="@id/uploadPictureImgButton"
+        app:layout_constraintLeft_toRightOf="@id/uploadPictureImgButton"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/uploadPictureImgButton" />
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginTop="@dimen/size_medium_16dp"
-        app:layout_constraintTop_toBottomOf="@id/uploadPictureImgButton"
+        android:layout_marginRight="@dimen/size_medium_16dp"
+        android:background="@color/colorBackground"
+        android:queryHint="@string/hint_search_clicked"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
-    </SearchView>
+        app:layout_constraintTop_toBottomOf="@id/uploadPictureImgButton"/>
 
     <TextView
-        android:text="@string/hint_search_not_clicked"
-        android:layout_marginLeft="@dimen/size_huge_48dp"
-        app:layout_constraintRight_toRightOf="@id/searchView"
-        app:layout_constraintLeft_toLeftOf="@id/searchView"
-        app:layout_constraintTop_toTopOf="@id/searchView"
-        app:layout_constraintBottom_toBottomOf="@id/searchView"
+        android:id="@+id/searchViewDescTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_huge_48dp">
+        android:layout_marginStart="@dimen/size_huge_48dp"
+        android:layout_marginLeft="@dimen/size_huge_48dp"
+        android:text="@string/hint_search_not_clicked"
+        app:layout_constraintBottom_toBottomOf="@id/searchView"
+        app:layout_constraintLeft_toLeftOf="@id/searchView"
+        app:layout_constraintRight_toRightOf="@id/searchView"
+        app:layout_constraintTop_toTopOf="@id/searchView">
 
     </TextView>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_marginTop="@dimen/size_small_8dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_small_8dp"
+        app:layout_constraintTop_toBottomOf="@id/searchView">
+
         <com.google.android.material.tabs.TabItem
-            android:text="@string/label_recent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/label_recent" />
+
         <com.google.android.material.tabs.TabItem
-            android:text="@string/label_contact_tab"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/label_contact_tab" />
     </com.google.android.material.tabs.TabLayout>
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@android:color/darker_gray"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="0dp"
-        android:layout_height="0dp"/>
+        android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/confirmButton"
+            app:layout_constraintBottom_toBottomOf="@id/confirmButton"
+            app:layout_constraintRight_toLeftOf="@id/confirmButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <ImageButton
+            android:background="@drawable/go"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/confirmButton"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="@dimen/size_huge_48dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
