--- a/app/src/main/res/layout/item_official_account.xml
+++ b/app/src/main/res/layout/item_official_account.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="@dimen/size_small_8dp"
+    android:paddingBottom="@dimen/size_small_8dp"
+    android:paddingLeft="@dimen/size_medium_16dp"
+    android:paddingRight="@dimen/size_medium_16dp"
     android:id="@+id/itemRoomRootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,7 +14,6 @@
         android:id="@+id/avatarImgView"
         android:layout_width="@dimen/size_room_item_avatar_48dp"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/size_medium_16dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:contentDescription="@string/description_avatar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,37 +24,28 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:text="@string/placeholder_text"
         android:id="@+id/nameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
+        android:layout_marginRight="@dimen/size_medium_16dp"
+        app:layout_constraintRight_toLeftOf="@id/iconTextView"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
-        app:layout_constraintEnd_toStartOf="@id/guideline7"
-        app:layout_constraintStart_toEndOf="@id/avatarImgView"
+        app:layout_constraintLeft_toRightOf="@id/avatarImgView"
         app:layout_constraintTop_toTopOf="@id/avatarImgView" />
 
     <ImageView
         android:id="@+id/iconTextView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
-        android:contentDescription="@string/description_preview_image"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline7"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_notification_overlay" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline7"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8" />
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/description_preview_image"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/avatarImgView"
+        app:srcCompat="@android:drawable/ic_notification_overlay" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
