--- a/app/src/main/res/layout/item_receive_room_activity.xml
+++ b/app/src/main/res/layout/item_receive_room_activity.xml
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:id="@+id/receiveMsgLinearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,21 +38,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/recv_message_bg"
-            android:text="@string/placeholder_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/placeholder_text"/>
 
         <TextView
             android:textSize="@dimen/size_small_text_10sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/size_small_8dp"
             android:id="@+id/recvTimeTextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/receiveMsgTextView" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/placeholder_text"/>
+    </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/receiveAvatarImgView"
@@ -60,7 +56,7 @@
         android:layout_marginStart="@dimen/size_small_8dp"
         android:layout_marginLeft="@dimen/size_small_8dp"
         android:layout_marginTop="@dimen/size_tiny_4dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/size_small_8dp"
         android:contentDescription="@string/description_avatar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
