--- a/app/src/main/res/layout/item_recent_contacts.xml
+++ b/app/src/main/res/layout/item_recent_contacts.xml
@@ -9,16 +9,15 @@
     android:paddingLeft="@dimen/size_medium_16dp"
     android:paddingRight="@dimen/size_medium_16dp"
     >
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatarImgView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="@dimen/size_huge_48dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
 
-        />
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/nameTextView"
         android:layout_marginRight="@dimen/size_medium_16dp"
@@ -34,6 +33,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         app:layout_constraintTop_toTopOf="@id/avatarImgView"
+        app:layout_constraintDimensionRatio="1:1"
         android:layout_width="@dimen/size_large_24dp"
-        android:layout_height="@dimen/size_large_24dp" />
+        android:layout_height="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
